app.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-svc
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-svc
  template:
    metadata:
      labels:
        app: http-svc
    spec:
      containers:
      - name: http-svc
        image: gcr.io/google_containers/echoserver:1.8
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: http-svc
  namespace: kong
  labels:
    app: http-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc

---

apiVersion: v1
kind: Service
metadata:
  name: http-gosvc
  namespace: kong
  labels:
    app: http-gosvc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-gosvc

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-gosvc
  namespace: kong
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-gosvc
  template:
    metadata:
      labels:
        app: http-gosvc
    spec:
      containers:
      - name: http-gosvc
        image: eviladmin/minisvc:v1 
        ports:
        - containerPort: 8080
