ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kong.kain.tech
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kong.kain.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
      - path: /container
        backend:
          serviceName: http-gosvc
          servicePort: 80
